--- a/client/src/app/core/navbar/navbar.component.scss
+++ b/client/src/app/core/navbar/navbar.component.scss
@@ -10,3 +10,15 @@
   top: -12px;
   right: 30px;
 }
+.logo:focus,
+.logo:active {
+  border: none;
+  outline: none;
+}
+a {
+  text-decoration: none;
+  color: #3a3434;
+  &.active {
+    color: orange;
+  }
+}
