End of section 12

--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,43 +1,40 @@
-<div class="container">
+<div class="container mt-5">
     <div class="row">
-
         <section class="col-3">
-            <h5 class="text-danger ml-3 ">Sort</h5>
-            <select class="custom-select mb-3" (change)="onSubmitSortSelected($event.target.value)">
-                <option *ngFor="let sort of sortOptions" value="{{sort.value}}">
-                    {{sort.name}}
-                </option>
-
-            </select>
-            <h5 class="text-danger ml-3 ">Brands</h5>
-            <ul class="list-group my-4 ">
-                <li class="list-group-item " aria-current="true" *ngFor="let brand of brands"
-                    [class.active]="brand.id===this.shopParams.brandId" [value]="brand.id"
-                    (click)="getBrandIdSelected(brand.id)">
-                    {{brand.name}}
-                </li>
-
-            </ul>
-            <h5 class="text-danger ml-3 ">Types</h5>
-            <ul class="list-group my-4 ">
-                <li class="list-group-item " aria-current="true" *ngFor="let type of types"
-                    [class.active]="type.id===this.shopParams.typeId" [value]="type.id"
-                    (click)="getTypeIdSelected(type.id)">
-                    {{type.name}}
-                </li>
-
-            </ul>
+            <ng-container *ngIf="types &&brands">
+                <h5 class="text-danger ml-3 ">Sort</h5>
+                <select class="custom-select mb-3" (change)="onSubmitSortSelected($event.target.value)">
+                    <option *ngFor="let sort of sortOptions" value="{{sort.value}}">
+                        {{sort.name}}
+                    </option>
+                </select>
+                <h5 class="text-danger ml-3 ">Brands</h5>
+                <ul class="list-group my-4 ">
+                    <li class="list-group-item " aria-current="true" *ngFor="let brand of brands"
+                        [class.active]="brand.id===this.shopParams.brandId" [value]="brand.id"
+                        (click)="getBrandIdSelected(brand.id)">
+                        {{brand.name}}
+                    </li>
+                </ul>
+                <h5 class="text-danger ml-3 ">Types</h5>
+                <ul class="list-group my-4 ">
+                    <li class="list-group-item " aria-current="true" *ngFor="let type of types"
+                        [class.active]="type.id===this.shopParams.typeId" [value]="type.id"
+                        (click)="getTypeIdSelected(type.id)">
+                        {{type.name}}
+                    </li>
+                </ul>
+            </ng-container>
         </section>
 
         <section class="col-9">
             <div class="d-flex align-items-center justify-content-between">
                 <app-paging-header [totalCount]="totalCount" [pageNumber]="this.shopParams.pageNumber"
                     [pageSize]="this.shopParams.pageSize"></app-paging-header>
-                <div class="form-inline">
-                    <input  (keyup)="onSearch()" #search class="form-control mr-2" style="width: 300px;">
+                <div class="form-inline " *ngIf="products">
+                    <input (keyup.enter)="onSearch()" #search class="form-control mr-2" style="width: 300px;">
                     <a (click)="onSearch()" class="btn btn-outline-secondary">Search</a>
                     <a (click)="onReset()" class="btn btn-outline-secondary ml-2">Reset</a>
-
                 </div>
             </div>
             <div class="row my-4">
