--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,8 @@
+<ngx-spinner>
+  <h3>Loading</h3>
+</ngx-spinner>
 <app-navbar></app-navbar>
-<div class="container" style="margin-top: 140px;">
-  <router-outlet></router-outlet>
+<app-section-header></app-section-header>
+<div>
+<router-outlet></router-outlet>
 </div>
