--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,5 +1,11 @@
 <div class="card h-100 box-shadow">
+    <div class="image position-relative " style="cursor: pointer;">
     <img class="img-fluid bg-info" src="{{product.picture}}" alt="{{product.name}}">
+    <div class=" d-flex align-items-center justify-content-center hover-overlay">
+        <button id="b1" type="button" class="btn btn-sm btn-primary fa fa-shopping-cart mr-2"></button>
+        <button id="b2" routerLink="/shop/{{product.id}}" type="button" class="btn btn-sm btn-primary">View</button>
+    </div>
+</div>
     <div class="card-body d-flex flex-column">
         <a routerLink="/shop/{{product.id}}">
             <h6 class="text-uppercase">{{product.name}}</h6>
@@ -7,10 +13,6 @@
         <span class="mb-2">{{product.price | currency}}</span>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
             additional content. This content is a little bit longer.</p>
-        <div class="btn-group mt-auto">
-            <button type="button" class="btn btn-sm btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-            <button routerLink="/shop/{{product.id}}"  type="button" class="btn btn-sm btn-outline-secondary" >View</button>
-        </div>
         <small class="text-muted">9 mins</small>
     </div>
 </div>
