--- a/client/src/app/shared/components/paging-header/paging-header.component.html
+++ b/client/src/app/shared/components/paging-header/paging-header.component.html
@@ -1,11 +1,9 @@
-<header><span *ngIf="totalCount">Showing<strong> {{(pageNumber-1)
-    * pageSize+1}} -
-    {{(pageNumber) *pageSize
-    > this.totalCount
-    ?this.totalCount
-    : pageNumber * pageSize}}
-</strong> of <strong> {{totalCount}} </strong> results </span>
-<span *ngIf="totalCount===0">There are <strong>0</strong>results for this filter
+<header><span *ngIf="totalCount">Showing<strong> {{(pageNumber-1)* pageSize+1}} -{{(pageNumber) *pageSize
+            > this.totalCount
+            ?this.totalCount
+            : pageNumber * pageSize}}
+        </strong> of <strong> {{totalCount}} </strong> results </span>
+    <span *ngIf="totalCount===0">There are <strong>0</strong>results for this filter
 
-</span>
+    </span>
 </header>
